<resources>
    <string name="app_name">MiniChat</string>
    <string name="stt">28/108</string>
    <string name="email">Email address</string>
    <string name="passwood">Password</string>
    <string name="best">Best place to find review</string>
    <string name="register">Register</string>
    <string name="youremail">Email Address</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="login">Sigin</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_fail">Authentication failed, check your email and password or sign up</string>
    <string name="fogot_password">Forgot Password?</string>
    <string name="fogot_pass_message">We just need your registered Email Id to send you Password reset instructions</string>
    <string name="reset">Reset Password</string>
    <string name="title_activity_main">MiniChat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sigout">SigOut</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">User Name</string>
    <string name="writing">Viêt bài</string>

    <string name="post_desc_hint">Add Description ...</string>
    <string name="new_post_btn_hint">Post Blog</string>
    <string name="setup_name_hint">Your Name...</string>
    <string name="setup_save_btn">Save Account Settings</string>
    <string name="setup_name_hint_text">Your Name ...</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
</resources>
