<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorToolbar"
    tools:context=".RegisterActivity">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/logo_home"
        android:layout_width="@dimen/_124sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:src="@drawable/ic_logo" />

    <TextView
        android:id="@+id/tv_gt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:text="@string/best"
        android:textColor="@color/colorNameDescription"
        tools:textSize="@dimen/_16sdp" />
    <EditText
        android:id="@+id/edt_username"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/edit_round"
        android:layout_marginTop="@dimen/_20sdp"
        android:drawableLeft="@drawable/ic_email"
        android:paddingLeft="@dimen/_15sdp"
        android:drawablePadding="@dimen/_15sdp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorTextSearch"
        android:textColorHint="@color/colorTextSearch"
        android:textSize="@dimen/_14sdp" />

    <EditText
        android:id="@+id/edt_sigup_mail"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/edit_round"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawableLeft="@drawable/ic_user"
        android:paddingLeft="@dimen/_15sdp"
        android:drawablePadding="@dimen/_15sdp"
        android:hint="@string/youremail"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorTextSearch"
        android:textColorHint="@color/colorTextSearch"
        android:textSize="@dimen/_14sdp" />

    <EditText
        android:id="@+id/edt_sigup_password"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/edit_round"
        android:drawableLeft="@drawable/ic_unlock"
        android:inputType="textPassword"
        android:drawablePadding="@dimen/_15sdp"
        android:paddingLeft="@dimen/_15sdp"
        android:textColor="@color/colorTextSearch"
        android:textColorHint="@color/colorTextSearch"
        android:hint="@string/passwood"
        android:textSize="@dimen/_14sdp" />

    <Button
        android:id="@+id/btn_sigup"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/button_round"
        android:text="@string/register"
        android:textColor="@color/ColorTextLogin"
        android:textSize="@dimen/_16sdp"/>

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@null"
        android:text="@string/btn_forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/colorTextSearch" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@null"
        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:textColor="@color/colorTextSearch"
        android:textSize="15dp" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="@dimen/_50sdp"
        android:visibility="gone"/>
</LinearLayout>



</android.support.constraint.ConstraintLayout>