<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorToolbar"
    tools:context=".ForgotPasswordActivity">
    <Button
        android:id="@+id/btn_back"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_back" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/logo_home"
            android:layout_width="@dimen/_124sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/tv_gt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_horizontal"
            android:text="@string/fogot_password"
            android:textColor="@color/colorNameDescription"
            tools:textSize="@dimen/_22sdp" />
        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:gravity="center_horizontal"
            android:text="@string/fogot_pass_message"
            android:textColor="@color/colorNameDescription"
            tools:textSize="@dimen/_16sdp" />

        <EditText
            android:id="@+id/edt_forgot_mail"
            android:layout_width="@dimen/_240sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/edit_round"
            android:layout_marginTop="@dimen/_20sdp"
            android:drawableLeft="@drawable/ic_user"
            android:paddingLeft="@dimen/_15sdp"
            android:drawablePadding="@dimen/_15sdp"
            android:hint="@string/youremail"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorTextSearch"
            android:textColorHint="@color/colorTextSearch"
            android:textSize="@dimen/_14sdp" />


        <Button
            android:id="@+id/btn_reset"
            android:layout_width="@dimen/_240sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button_round"
            android:text="@string/reset"
            android:textColor="@color/ColorTextLogin"
            android:textSize="@dimen/_16sdp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="@dimen/_50sdp"
            android:visibility="gone"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>